week9 Fixed recycler decorator with custom list. Added database + tests Showing whole date Data is loaded with loader from db. Switch in actionbar